[package]
name = "node-talk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.23", features = ["full"] }
# serde_json = "1.0"
# futures = "0.3"
# tokio-stream = "0.1"